<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/open_chat"/>
        <item
            android:id="@+id/clean_markers"
            android:icon="@drawable/ic_trash"
            android:title="@string/delete_markers"/>
        <item
            android:id="@+id/traffic"
            android:icon="@drawable/ic_traffic"
            android:title="@string/show_traffic"/>
    </group>

    <item android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit"
                android:title="@string/exit"/>
        </menu>
    </item>

</menu>
